--- a/td/fiche-exercices.tex
+++ b/td/fiche-exercices.tex
@@ -32,7 +32,7 @@
 \[
 u(x) = x^{\alpha}
 \]
-avec $0<\alpha<1$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Quelle est la fonction de demande associée à cette fonction d'utilité~? On notera la fonction de demande $D(p)$. \question{2} Calculer l'élasticité, $\epsilon(p)$, de la demande (par rapport au prix). Discuter la forme de la fonction et l'effet d'une variation du paramètre $\alpha$ en interprétant ce paramètre par rapport à l'utilité marginale. \question{3} Calculer le surplus du consommateur, $\Psi(\bar p)$, Représenter le surplus graphiquement en considérant le cas $\alpha=\frac{1}{2}$.\newline
+avec $0<\alpha<1$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Quelle est la fonction de demande associée à cette fonction d'utilité~? On notera la fonction de demande $D(p)$. \question{2} Calculer l'élasticité, $\epsilon(p)$, de la demande (par rapport au prix). Discuter la forme de la fonction et l'effet d'une variation du paramètre $\alpha$ en interprétant ce paramètre par rapport à l'utilité marginale. \question{3} Calculer le surplus du consommateur, $\Psi(\bar p)$. Représenter le surplus graphiquement en considérant le cas $\alpha=\frac{1}{2}$.\newline
 
 \bigskip
 
@@ -44,7 +44,7 @@ u(x) =
   \frac{a^2}{4} & \text{sinon.}
 \end{cases}
 \]
-avec $a>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Calculer l'utilité marginale et justifier la forme de la fonction d'utilité. Est-il possible d'écrire cette fonction de façon plus synthétique~? \question{2} Déterminer la fonction de demande, $D(p)$, exrimée par le ménage. Proposer une interprétation du paramètre $a$. \question{3} Calculer l'éasticité prix de la demande. Discuter ses propriétés et donner une représentation graphique (avec $a=1$). \question{4} Calculer le surplus du ménage, $\Psi(\bar p)$, puis donner une représentation graphique.\newline
+avec $a>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Calculer l'utilité marginale et justifier la forme de la fonction d'utilité. Est-il possible d'écrire cette fonction de façon plus synthétique~? \question{2} Déterminer la fonction de demande, $D(p)$, exprimée par le ménage. Proposer une interprétation du paramètre $a$. \question{3} Calculer l'élasticité prix de la demande. Discuter ses propriétés et donner une représentation graphique (avec $a=1$). \question{4} Calculer le surplus du ménage, $\Psi(\bar p)$, puis donner une représentation graphique.\newline
 
 \bigskip
 
@@ -52,7 +52,7 @@ avec $a>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bi
 \[
 u(x) = \beta\log (1+x)
 \]
-avec $\beta>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Déterminer la demande (non négative) exprimée par le ménage. On notera $D(p)$ la fonction de demande. Donner une interprétation au paramètre $\beta$. \question{2} Calculer l'élasticité prix de la demande, $\epsilon(p)$, discuter ses propriétés et Représenter graphiquement l'élasticité (en posant $\beta=1$). \question{3} Calculer le surplus du consommateur, $\Psi(\bar p)$, puis donner une représentation graphique.\newline
+avec $\beta>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Déterminer la demande (non négative) exprimée par le ménage. On notera $D(p)$ la fonction de demande. Donner une interprétation au paramètre $\beta$. \question{2} Calculer l'élasticité prix de la demande, $\epsilon(p)$, discuter ses propriétés et représenter graphiquement l'élasticité (en posant $\beta=1$). \question{3} Calculer le surplus du consommateur, $\Psi(\bar p)$, puis donner une représentation graphique.\newline
 
 \bigskip
 
@@ -70,8 +70,3 @@ avec $\gamma>0$, où $x$ est la quantité de bien consommé. Pour chaque unité 
 %%% mode: latex
 %%% TeX-master: t
 %%% End:
-
-% 05 68 et 05 69
-
-
-0948*, 0949*, 0162*, 0163*, 0270*, 0271*, 0377*, 0378*, 0424*, 0425*, 0568*, 0569*
