Ajout d'exercices sur la fonction de coût de l'entreprise.

--- a/td/fiche-exercices.tex
+++ b/td/fiche-exercices.tex
@@ -61,7 +61,37 @@ avec $\beta>0$, où $x$ est la quantité de bien consommé. Pour chaque unité d
 u(x) = -e^{-\gamma x}
 \]
 avec $\gamma>0$, où $x$ est la quantité de bien consommé. Pour chaque unité du bien demandée, le ménage doit payer $p>0$. Le ménage dispose d'un revenu $R$. \question{1} Déterminer la demande (non négative) exprimée par le ménage. On notera $D(p)$ la fonction de demande. Donner une interprétation au paramètre $\gamma$. \question{2} Calculer l'élasticité prix de la demande, $\epsilon(p)$, discuter ses propriétés et représenter graphiquement l'élasticité (en posant $\gamma=1$). \question{3} Calculer le surplus du consommateur, $\Psi(\bar p)$, puis donner une représentation graphique.\newline
+\bigskip
 
+\exercice Soit une entreprise dont la technologie est caractérisée par
+la fonction de production $q=l^2$, où $l$ est le volume d'heures de
+travail et $q$ la quantité de bien produite. On note $w$ le salaire
+horaire. \question{1} Donner la fonction de coût de
+l'entreprise. \question{2} Cette fonction de coût présente-t-elle des
+économies d'échelle~?\newline
+
+\bigskip
+
+\exercice Soit une entreprise dont la technologie est caractérisée par
+la fonction de production $q=\sqrt{xl}$, où $x$ est la quantité de
+matière première utilisée, $l$ est le volume d'heures de travail
+et $q$ la quantité de bien produite. On note $w$ le salaire horaire
+et $p$ le prix (par unité) de la matière première. \question{1} Donner
+la fonction de coût de l'entreprise. \question{2} Cette fonction de
+coût présente-t-elle des économies d'échelle~?\newline
+
+\bigskip
+
+\exercice Soit une entreprise dont la technologie est caractérisée par
+la fonction de production $q=\sqrt{l}$, où $l$ est le volume d'heures
+de travail et $q$ la quantité de bien produite. On note $w$ le salaire
+horaire. Pour pouvoir participer au marché la firme doit au préalable
+s'acquitter un montant forfaitaire $F>0$. \question{1} \question{1}
+Donner la fonction de coût de l'entreprise. \question{2} Représenter
+graphiquement le coût moyen et le coût marginal, comme des fonctions
+de $q$, avec $F=1$ et $w=1$. Que se passe-t-il en $q=1$~?\question{3}
+Cette fonction de coût présente-t-elle des économies d'échelle~?
+Discuter selon le niveau de la production.\newline
 
 \end{document}
 
