Correction d'une typo et ajout de questions sur coûts moyen/marginal.

--- a/td/fiche-exercices.tex
+++ b/td/fiche-exercices.tex
@@ -109,8 +109,9 @@ graphique.\newline
 la fonction de production $q=l^2$, où $l$ est le volume d'heures de
 travail et $q$ la quantité de bien produite. On note $w$ le salaire
 horaire. \question{1} Donner la fonction de coût de
-l'entreprise. \question{2} Cette fonction de coût présente-t-elle des
-économies d'échelle~?\newline
+l'entreprise. Calculer le coût moyen et le coût marginal, comparer ces
+deux quantités. \question{2} Cette fonction de coût présente-t-elle
+des économies d'échelle~?\newline
 
 \bigskip
 
@@ -119,7 +120,8 @@ la fonction de production $q=\sqrt{xl}$, où $x$ est la quantité de
 matière première utilisée, $l$ est le volume d'heures de travail
 et $q$ la quantité de bien produite. On note $w$ le salaire horaire
 et $p$ le prix (par unité) de la matière première. \question{1} Donner
-la fonction de coût de l'entreprise. \question{2} Cette fonction de
+la fonction de coût de l'entreprise. Calculer le coût moyen et le coût
+marginal, comparer ces deux quantités. \question{2} Cette fonction de
 coût présente-t-elle des économies d'échelle~?\newline
 
 \bigskip
@@ -128,7 +130,7 @@ coût présente-t-elle des économies d'échelle~?\newline
 la fonction de production $q=\sqrt{l}$, où $l$ est le volume d'heures
 de travail et $q$ la quantité de bien produite. On note $w$ le salaire
 horaire. Pour pouvoir participer au marché la firme doit au préalable
-s'acquitter un montant forfaitaire $F>0$. \question{1} \question{1}
+s'acquitter un montant forfaitaire $F>0$. \question{1}
 Donner la fonction de coût de l'entreprise. \question{2} Représenter
 graphiquement le coût moyen et le coût marginal, comme des fonctions
 de $q$, avec $F=1$ et $w=1$. Que se passe-t-il en $q=1$~?\question{3}
