Ajout d'exercices sur le bien être social.

--- a/td/fiche-exercices.tex
+++ b/td/fiche-exercices.tex
@@ -137,6 +137,57 @@ de $q$, avec $F=1$ et $w=1$. Que se passe-t-il en $q=1$~?\question{3}
 Cette fonction de coût présente-t-elle des économies d'échelle~?
 Discuter selon le niveau de la production.\newline
 
+\bigskip
+
+\exercice Soit un marché où les consommateurs expriment la demande suivante~:
+\[
+  D(p) = \left( \frac{\alpha}{p} \right)^{\frac{1}{1-\alpha}}
+\]
+avec $0<\alpha<1$, où $p$ est le prix du bien. D'autre part les
+entreprises produisent à un coût constant $c>0$ chaque unité de
+bien. \question{1} Calculer le bien être social sur ce
+marché. \question{2} Quelle est la quantité socialement optimale~?
+Quel est le prix socialement optimal~?\newline
+
+\bigskip
+
+\exercice Soit un marché où les consommateurs expriment la demande suivante~:
+\[
+  D(p) = \max \left\{\frac{a-p}{2}, 0\right\}
+\]
+D'autre part les entreprises produisent au coût unitaire
+constant $c>0$ et subissent un coût fixe $F>0$. \question{1} Calculer
+le bien être social sur ce marché. \question{2} Quelle est la quantité
+socialement optimale~? Quel est le prix socialement optimal~?
+\question{3} L'optimum social est-il réalisable~? Pourquoi~? \question{4}
+Proposer une tarification réalisable qui se rapproche le plus possible de l'optimum social.\newline
+
+\bigskip
+
+\exercice Soit un marché où les consommateurs expriment la demande suivante~:
+\[
+  D(p) = \max \left\{\frac{1}{\gamma}\log \frac{\gamma}{p}, 0\right\}
+\]
+avec $\gamma>0$. D'autre part les entreprises produisent au coût unitaire
+constant $c>0$. \question{1} Calculer
+le bien être social sur ce marché. \question{2} Quelle est la quantité
+socialement optimale~? Quel est le prix socialement optimal~?
+
+\bigskip
+
+\exercice Soit un marché où les consommateurs expriment la demande suivante~:
+\[
+  D(p) = \max \left\{\frac{a-p}{2}, 0\right\}
+\]
+D'autre part les entreprises produisent au coût total suivant~:
+\[
+C(q) = cq + dq^2
+\]
+avec $c>0$ et $d\neq 0$. \question{1} Calculer le bien être social sur
+ce marché. \question{2} Quelle est la quantité socialement optimale~?
+\question{3} Quel est le prix socialement optimal~? \question{4}
+Comparer le coût marginal et le prix.
+
 \end{document}
 
 
