Ajout de trois exercices sur la tarification du monopole.

--- a/td/fiche-exercices.tex
+++ b/td/fiche-exercices.tex
@@ -171,7 +171,7 @@ Proposer une tarification réalisable qui se rapproche le plus possible de l'opt
 avec $\gamma>0$. D'autre part les entreprises produisent au coût unitaire
 constant $c>0$. \question{1} Calculer
 le bien être social sur ce marché. \question{2} Quelle est la quantité
-socialement optimale~? Quel est le prix socialement optimal~?
+socialement optimale~? Quel est le prix socialement optimal~?\newline
 
 \bigskip
 
@@ -186,7 +186,59 @@ C(q) = cq + dq^2
 avec $c>0$ et $d\neq 0$. \question{1} Calculer le bien être social sur
 ce marché. \question{2} Quelle est la quantité socialement optimale~?
 \question{3} Quel est le prix socialement optimal~? \question{4}
-Comparer le coût marginal et le prix.
+Comparer le coût marginal et le prix.\newline
+
+\bigskip
+
+\exercice Soit un marché où les consommateurs expriment la demande suivante~:
+\[
+  D(p) = \max \left\{a-p, 0\right\}
+\]
+D'autre part les entreprises produisent au coût total suivant~:
+\[
+C(q) = cq + dq^2
+\]
+avec $c>0$. \question{1} Discuter les propriétées de la fonction de
+coût en relation avec le signe du paramètre $d$. \question{2}
+Déterminer la quantité de bien inchangée et le prix si l'environnement
+est parfaitement concurrentiel, $q^{\star}$
+et $p^{\star}$. \question{3} Calculer le surplus des
+consommateurs. Calculer le profit des entreprises. Discuter le signe
+du profit en fonction du paramètre $d$. Calculer le bien être
+social. \question{4} Calculer la quantitée de bien échangée et le prix
+d'équilibre, $q^{\text{M}}$ et $p^{\text{M}}$, si le marché est servi
+par un monopole. \question{5} Montrer que le profit est plus important
+si le marché est servi par un monopole. \question{6} Montrer que le
+surplus des consommateurs est plus faible lorsque le marché est servi
+par un monopole.\question{7} Montrer que le bien être social est plus
+faible lorsque le marché est servi par un monopole (si le
+paramètre $d$ n'est pas trop petit).\newline
+
+\bigskip
+
+\exercice Montrer que sur un marché en présence d'un monopole, l'état
+peut rétablir le bien être social en taxant ou subventionnant la
+consommation. \textbf{Indice:} Poser le problème du monopole en
+intégrant le fait que la taxe ou subvention n'affecte le profit que
+via la demande.\newline
+
+\bigskip
+
+\exercice On considère un monopole producteur de deux biens, 1 et 2,
+qu'il vend au prix $p_1$ et $p_2$. Les demandes pour les deux biens
+sont données par $D_1(p_1,p_2)$ et $D_2(p_1,p_2)$. On suppose que la
+fonction de coût est séparable c'est-à-dire que le coût de production
+du bien $j$ ne dépend pas dans la quantité de bien $i$
+produite. \question{1} Écrire le profit du monopole comme une fonction
+des prix. \question{2} Écrire les conditions du premier ordre du
+monopole. \question{3} Définir les élasticités prix. Commenter le
+signe des élasticités croisées. \question{4} Réécrire les conditions
+du premier ordre en exprimer les indices de Lerner pour les deux biens
+en fonction des élasticités. Commenter.
+
+
+
+
 
 \end{document}
 
