--- a/ds/examen-2024-2025-a.tex
+++ b/ds/examen-2024-2025-a.tex
@@ -44,7 +44,7 @@ représentatif pour la consommation d'un bien sont caractérisées par~:
 \[
   u(q) =
   \begin{cases}
-    \left( a - \frac{1}{2}q \right)q &\text{ si } q\leq 1\\
+    \left( a - \frac{1}{2}q \right)q &\text{ si } q\leq a\\
     \frac{a^2}{2} &\text{ sinon.}
   \end{cases}
 \]
