--- a/README.org
+++ b/README.org
@@ -8,3 +8,4 @@
 
  - [[https://le-mans.adjemian.eu/micro-l2/fiche-exercices.pdf][Fiche d'exercices]]
  - Éléments de correction (notes manuscrites à lire avec prudence) : [[https://le-mans.adjemian.eu/micro-l2/correction-td-micro-2024-09-23.pdf][tome 1]], [[https://le-mans.adjemian.eu/micro-l2/correction-td-micro-2024-09-29.pdf][tome 2]], [[https://le-mans.adjemian.eu/micro-l2/correction-td-micro-2024-10-19.pdf][tome 3]], [[https://le-mans.adjemian.eu/micro-l2/correction-td-micro-2024-11-22.pdf][tome 4]].
+ - [[https://le-mans.adjemian.eu/micro-l2/examen-2024-2025-a.pdf][Examen 2024-2025]],  [[https://le-mans.adjemian.eu/micro-l2/correction-2024-2025-a.pdf][Éléments de correction]].
